# _todo_app

./: README.md
_todo_app/backend/todo-app/: pyproject.toml
_todo_app/backend/todo-app/tests/: test_main.py
_todo_app/backend/todo-app/todo_app/: main.py  settings.py
